2003-11-10  Shaun McCance  <shaunm@gnome.org>

	* configure.in: Version 2.4.2

2003-11-10  Shaun McCance  <shaunm@gnome.org>

	* src/info2html/main.c:
	- Fix silliness with g_strdup_printf
	  (Joe Marcus Clarke and Roderich Schupp)

2003-09-01  Shaun McCance  <shaunm@gnome.org>

	* configure.in: Version 2.4.1

2003-10-06  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mr" to ALL_LINGUAS.

2003-10-06  Žygimantas Beručka  <uid0@tuxfamily.org>

	* configure.in: Added "lt" to ALL_LINGUAS

2003-09-08  Shaun McCance  <shaunm@gnome.org>

	* configure.in: Version 2.4.0
	* src/yelp-window.c: Added self to About

2003-09-03  Shaun McCance  <shaunm@wolfram.com>

	* src/yelp-main.c:
	- Fix from alexl for forkbomb when DISPLAY is set.

2003-09-01  Shaun McCance  <shaunm@wolfram.com>

	* configure.in: Version 2.3.90

2003-08-26  Shaun McCance  <shaunm@wolfram.com>

	* README: Updated README so it's correct

2003-08-18  Shaun McCance  <shaunm@wolfram.com>

	* src/yelp-window.c: declare variables at top of block

2003-08-18  Jakub Steiner <jimmac@ximian.com>

	* stylesheets/docbook/*.png: provide nicer, gnome2-styled images

2003-08-15  Mikael Hallendal  <micke@imendio.com>

        * src/GNOME_Yelp.server.in: Replaced yelp-base for yelp. Not sure what
          should be in there really... Might fix bug #119764

	* src/yelp-window.c: (window_init), (window_configure_cb):
        - Save size from last window. Patch by Shaun McCance.
        - Fixes bug #90451

	* configure.in: 
        - Applied patch from Steve Chaplin that fixes the CFLAGS.
        - Fixes bug #118984

	* src/yelp-main.c: 
        (main_restore_session): Return FALSE, otherwise we'll try to start Yelp
          from the session over and over again. Reported by Jody earlier.

2003-08-14  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ne" to ALL_LINGUAS.

2003-08-13  Shaun McCance  <shaunm@wolfram.com>

	* src/yelp-view-toc.c